--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# SERVER
+server.port=8082
 
+# HIBERNATE
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# DATASOURCE
+spring.datasource.url=jdbc:mysql://localhost:3306/flight-service
+spring.datasource.username=root
+spring.datasource.password=
