--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/flight-service
 spring.datasource.username=root
 spring.datasource.password=
+
+# Security
+oauth.jwt.secret=secret_key
