--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 # SERVER
 server.port=8082
-
 # HIBERNATE
 spring.jpa.hibernate.ddl-auto=create-drop
-
 # DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/flight-service
 spring.datasource.username=root
 spring.datasource.password=
-
 # Security
 oauth.jwt.secret=secret_key
+# ActiveMQ
+amq.url=tcp://localhost:61616
+amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=${amq.url}${amq.queryParameters}
+destination.delete_flight=VirtualTopic.delete_flight
